--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cached_network_image: ^3.2.3
   html: ^0.15.4
   provider: ^6.0.4
+  like_button: ^2.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
