--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   html: ^0.15.4
   provider: ^6.0.4
   like_button: ^2.0.5
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -74,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/theloai/
     - assets/images/icosetting/
   #   - images/a_dot_ham.jpeg
 
