--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   provider: ^6.0.4
   like_button: ^2.0.5
   rename: ^3.0.1
-  
+  image_picker: ^1.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
