--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,10 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Allow the app to record using your phone's microphone</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To change the your profile picture. Your photos and videos will not be shared without your permission</string>
+
 </dict>
 </plist>
