--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,8 @@ dependencies:
   rename: ^3.0.1
   image_picker: ^1.0.2
   image: ^4.1.3
-
+  share_plus: ^7.2.1
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
@@ -84,7 +85,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/images/theloai/
     - assets/images/icosetting/
   #   - images/a_dot_ham.jpeg
 
