--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   image: ^4.1.3
   share_plus: ^7.2.1
   share: ^2.0.4
+  custom_refresh_indicator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
